--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
 
 									<h5>Example:</h5>
 									<ul>
-										<li>
+										<li>Here is the example of Dockerfile:
 											<br>
 											# set base image downloaded from Docker repository<br>
-											<code>FROM python:3.8</code><br>
+											<code>FROM python:3.7</code><br>
 											# set the working directory in the container<br>
 											<code>WORKDIR /code</code><br>
-											# copy the dependencies file forem dockerfile directory to the current working directory of the container<br>
+											# copy the file form dockerfile directory to the current working directory of the container<br>
 											<code>COPY requirements.txt .</code><br>
 											# install dependencies<br>
 											<code>RUN pip install -r requirements.txt</code><br>
@@ -134,7 +134,6 @@
 											# command to run on container start<br>
 											<code>CMD [ "python", "./main.py" ]</code>
 										</li>
-										<li></li>
 									</ul>
 
 
