--- a/index.html
+++ b/index.html
@@ -63,7 +63,15 @@
 											<li>Any missing elements are downloaded (pulled) from Docker registry into Docker image.</li>
 											<li>Running many Docker containers based on built Docker image.</li>
 										</ol>
+
 										<img src="images/dockerflow.JPG">
+
+										<h5>Docker container:</h5>
+										<ul>
+											<li>Unlike Virtual Machines, Docker containers are not meant to host operating systems.</li>
+											<li>Containers are meant to run a specific task or process like hosting instance of web server, application or database, computation or analysis.</li>
+											<li>Once the task is complete, the container terminates. Container lives as long as the process inside it is alive.</li>
+										</ul>
 
 									</header>
 								</div>
@@ -136,6 +144,11 @@
 										</li>
 										<li>Due to the fact, the application’s dependencies change less frequently than the Python code, the insctruction of installing dependencies precedes the instruction of exporting app's source code to the container.</li>
 										<li>That way, we have the source code layer upon the dependencies layer and any changes to the code won't affect the dependencies layer.</li>
+									</ul>
+
+									<h5>Docker commands:</h5>
+									<ul>
+										<li></li>
 									</ul>
 
 								</div>
