--- a/index.html
+++ b/index.html
@@ -148,9 +148,27 @@
 
 									<h5>Docker commands:</h5>
 									<ul>
-										<li></li>
+										<li>Here are some useful docker cmd commands:
+											<br>
+											<code>docker -v</code><br>
+											<code>docker run hello-world</code><br>
+											<code>docker container ls -a  == docker ps</code><br>
+											<code>docker container rm xxx</code><br>
+											<code>docker images</code><br>
+											<code>docker image rm xxx</code><br>
+											<code>docker pull python --- it pulls down image, it doesn't create a container</code><br>
+											<code>docker images python</code><br>
+											<code>docker container stop image_name</code><br>
+											<code>docker container exec -it image_name bash --- entering container</code><br>
+										</li>
+										<li>Getting all dependencies for a Python app:
+											<br>
+											<code>env/scripts>activate</code><br>
+											<code>pip list</code><br>
+											<code>pip freeze</code><br>
+											<code>pip freeze > requirements.txt</code>
+										</li>
 									</ul>
-
 								</div>
 							</section>
 
