--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
 											<br>
 											changing directory to the one of Dockerfile's:<br>
 											<code>cd ./docker_test</code><br>
-											building images giving a name and current directory (dot):<br>
+											building image giving a name and current directory (dot):<br>
 											<code>docker build -t 'image_name' .</code><br>
-											listiong all images:<br>
+											listing all images:<br>
 											<code>docker images</code><br>
-											running contianer which runs application as well:<br>
+											running container which runs application as well:<br>
 											<code>docker run -ti --name container_name image_name</code><br>
 											check all the docker containers:<br>
 											<code>docker ps</code><br>
@@ -188,9 +188,11 @@
 										</li>
 										<li>Getting all dependencies for a Python app:
 											<br>
+											activating Virtual Environment:<br>
 											<code>env/scripts>activate</code><br>
+											listing all lisnalled dependecies:<br>
 											<code>pip list</code><br>
-											<code>pip freeze</code><br>
+											pasting all dependencies with their version into a txt file:<br>
 											<code>pip freeze > requirements.txt</code>
 										</li>
 									</ul>
