--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
 											<code>docker run -ti --name container_name image_name</code><br>
 											check all the docker containers:<br>
 											<code>docker ps</code><br>
+											mapping local directory to container container in order to get outputs from container to local directory:<br>
+											<code>docker run -v C:\...\docker_test:/code<</code><br>&nbsp&nbsp&nbsp
+												mapping local dir: <code>C:\...\docker_test</code> to container dir: <code>/code</code>
 										</li>
 									</ul>
 
