--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 											changing directory to the one of Dockerfile's:<br>
 											<code>cd ./docker_test</code><br>
 											building image giving a name and current directory (dot):<br>
-											<code>docker build -t 'image_name' .</code><br>
+											<code>docker build -t image_name .</code><br>
 											listing all images:<br>
 											<code>docker images</code><br>
 											running container which runs application as well:<br>
@@ -161,7 +161,7 @@
 											check all the docker containers:<br>
 											<code>docker ps</code><br>
 											mapping local directory to container container in order to get outputs from container to local directory:<br>
-											<code>docker run -v C:\...\docker_test:/code<</code><br>&nbsp&nbsp&nbsp
+											<code>docker run -v C:\...\docker_test:/code</code><br>&nbsp&nbsp&nbsp
 												mapping local dir: <code>C:\...\docker_test</code> to container dir: <code>/code</code>
 										</li>
 									</ul>
