--- a/index.html
+++ b/index.html
@@ -73,6 +73,40 @@
 											<li>Once the task is complete, the container terminates. Container lives as long as the process inside it is alive.</li>
 										</ul>
 
+										<h5>Virtual Machines vs Docker Containers:</h5>
+										<img src="images/vm_vs_docker.JPG" width="700"><span style="font-size:12px;">source: geekflare</span><br><br>
+										<table>
+											<thead>
+												<tr>
+													<th>Virtual Machine</th>
+													<th>Docker Containers</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>VMs don't share resources with host operating system.</td>
+													<td>Containers share resources with host operating system.</td>
+												</tr>
+												<tr>
+													<td>With Guest Os you start with full-fledged operting sytem and then you can strip out things you don't need for an app.</td>
+													<td>By sharing resources you start wit the basics and you add up what you need for an app.</td>
+												</tr>
+											</tbody>
+										</table>
+
+										<h5>Docker Architecture:</h5>
+										<ol>
+											<li>Docker Daemon on a server - manages docker objects: images, containers, network. Runs on OS.</li>
+											<li>REST API available by Docker Daemon as interface to interact to Daemon - passing docker commands.</li>
+											<li>Client Docker CLI (Command Line Interface) for communication with docker daemon</li>
+										</ol>
+										<img src="images/docker_architecture.JPG" width="700"><span style="font-size:12px;">source: geekflare</span><br><br>
+										<ul>
+											<li>When docker build command: docker daemon looks for docker file to create an image.</li>
+											<li>When docker pull command: docker daemon pulls an image from registry on docker hub into docker host.</li>
+											<li>When docker run command: docker daemon runs an image into docker container within docker host.</li>
+										</ul>
+
 									</header>
 								</div>
 							</section>
