--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										</ul>
 
 										<h5>Virtual Machines vs Docker Containers:</h5>
-										<img src="images/vm_vs_docker.jpg" width="700"><span style="font-size:12px;">source: geekflare</span><br><br>
+										<img src="images/vm_vs_docker.jpg	" width="700"><span style="font-size:12px;">source: geekflare</span><br><br>
 										<table>
 											<thead>
 												<tr>
@@ -98,12 +98,12 @@
 										<ol>
 											<li>Docker Daemon on a server - manages docker objects: images, containers, network. Runs on OS.</li>
 											<li>REST API available by Docker Daemon as interface to interact to Daemon - passing docker commands.</li>
-											<li>Client Docker CLI (Command Line Interface) for communication with docker daemon</li>
+											<li>Client Docker CLI (Command Line Interface) for communication with docker daemon.</li>
 										</ol>
 										<img src="images/docker_architecture.jpg" width="700"><span style="font-size:12px;">source: geekflare</span><br><br>
 										<ul>
 											<li>When docker build command: docker daemon looks for docker file to create an image.</li>
-											<li>When docker pull command: docker daemon pulls an image from registry on docker hub into docker host.</li>
+											<li>When docker pull command: docker daemon pulls an image from registry docker hub into docker host.</li>
 											<li>When docker run command: docker daemon runs an image into docker container within docker host.</li>
 										</ul>
 
