--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
 											<li>When docker run command: docker daemon runs an image into docker container within docker host.</li>
 										</ul>
 
+										<h5>Docker Compose:</h5>
+										<ul>
+											<li>It is very helpful when we use different technologies and each of them we want to contenerize in its own isotlated environment.</li>
+											<li>We can use Docke Compose or connecting and orchestrating them in order to define and run multi-container Docker applications.</li>
+											<li>All the necessary configuration of how much conatiers (services) make up the application is placed in the compose file format: <code>docker-compose.yml</code></li>
+											<li>There are 3 steps to make it run:
+												1. Writing <code>Dockerfile</code> with proper app's environment settings.<br>
+												2. Defining all the necessary sevices that make up the applicaion in ghe file <code>docker-compose.yml</code>.<br>
+												3. Running it with command: <code>docker-compose up</code>.
+											</li>
+											<li>Docker Compose is included in Docker Desktop for Windows.</li>
+											<li>Docker Compose can be installed with pip as well: <code>pip install docker-compose</code></li>
+										</ul>
+
 										<h5>Kubernetes aka. k8s:</h5>
 										<ul>
 											<li>Open-source platform for clustering, running, scaling and managing containerized applicatons.</li>
