--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 											<li>There are 3 steps to make it run:
 												<br>
 												1. Writing <code>Dockerfile</code> with proper app's environment settings.<br>
-												2. Defining all the necessary sevices that make up the applicaion in ghe file <code>docker-compose.yml</code>.<br>
+												2. Defining all the necessary sevices that make up the applicaion in ghe file<br> <code>docker-compose.yml</code>.<br>
 												3. Running it with command: <code>docker-compose up</code>.
 											</li>
 											<li>Docker Compose is included in Docker Desktop for Windows.</li>
