--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
 											<li>When docker run command: docker daemon runs an image into docker container within docker host.</li>
 										</ul>
 
+										<h3>Multi-container Apps</h3>
+
 										<h5>Docker Compose:</h5>
 										<ul>
-											<li>It is very helpful when we use different technologies and each of them we want to contenerize in its own isotlated environment.</li>
-											<li>We can use Docke Compose or connecting and orchestrating them in order to define and run multi-container Docker applications.</li>
+											<li>It is very helpful when we use different technologies and each of them we want to contenerize in its own isolated environment.</li>
+											<li>We can use Docke Compose for connecting and orchestrating them in order to define and run multi-container Docker applications.</li>
 											<li>All the necessary configuration of how much conatiers (services) make up the application is placed in the compose file format: <code>docker-compose.yml</code></li>
 											<li>There are 3 steps to make it run:
 												<br>
@@ -119,7 +121,7 @@
 												3. Running it with command: <code>docker-compose up</code>.
 											</li>
 											<li>Docker Compose is included in Docker Desktop for Windows.</li>
-											<li>Docker Compose can be installed with pip as well: <code>pip install docker-compose</code></li>
+											<li>Docker Compose can be installed with pip as well: <code>pip install docker-compose</code>.</li>
 										</ul>
 
 										<h5>Kubernetes aka. k8s:</h5>
