--- a/index.html
+++ b/index.html
@@ -102,13 +102,12 @@
 										</ol>
 										<img src="images/docker_architecture.jpg" width="700"><span style="font-size:12px;">source: geekflare</span><br><br>
 										<ul>
-											<li>When docker build command: docker daemon looks for docker file to create an image.</li>
-											<li>When docker pull command: docker daemon pulls an image from registry docker hub into docker host.</li>
-											<li>When docker run command: docker daemon runs an image into docker container within docker host.</li>
+											<li>docker build command -> docker daemon looks for docker file to create an image.</li>
+											<li>docker pull command -> docker daemon pulls an image from registry docker hub into docker host.</li>
+											<li>docker run command -> docker daemon runs an image into docker container within docker host.</li>
 										</ul>
 
 										<h3>Multi-container Apps</h3>
-
 										<h5>Docker Compose:</h5>
 										<ul>
 											<li>It is very helpful when we use different technologies and each of them we want to contenerize in its own isolated environment.</li>
