--- a/index.html
+++ b/index.html
@@ -138,7 +138,12 @@
 											</li>
 										</ul>
 
-
+										<h5>Kubernetes Load Balancer:</h5>
+										<ul>
+											<li>Kubernetes is able to create multiple instances of the application such that a traffic can be distributed evenly preventing app from getting crashed.</li>
+											<li>User accessing the application will not directly hit its URL but they will call load balancer that distributes traffic over number of app's intances.</li>
+											<li>That way Kubernetes serves the application scalably - when one app instance crashes it creates another ensuring reliable and scalable app deployment.</li>
+										</ul>
 
 									</header>
 								</div>
