--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 											- when changes to a code we need to rebuild contaienrs:<br>
 											<code>docker-compose up --build</code><br>
 											- stopping containers:<br>
-											<code>docker-compose down<code>
+											<code>docker-compose down</code>
 										</li>
 									</ul>
 
