--- a/index.html
+++ b/index.html
@@ -119,11 +119,12 @@
 											<li>It is very helpful when we use different technologies and each of them we want to contenerize in its own isolated environment.</li>
 											<li>We can use Docke Compose for connecting and orchestrating them in order to define and run multi-container Docker applications.</li>
 											<li>Each container needs to have its own Dockerfile that defines its running environment.</li>
+											<li>Each container should be providing a snigle service: user login service, user registraion service, db and so on.</li>
 											<li>All the necessary configuration of how much conatiers (services) make up the application is placed in the compose file format: <code>docker-compose.yml</code></li>
 											<li>There are 3 steps to make it run:
 												<br>
-												1. Writing a <code>Dockerfile</code> with proper app's environment settings.<br>
-												2. Defining all the necessary sevices that make up the applicaion in the file:<br> <code>docker-compose.yml</code>.<br>
+												1. Writing a <code>Dockerfile</code> with proper app's environment settings - one dockerfile per one service that will be contenerzied.<br>
+												2. Defining all the necessary sevices that make up the applicaion in the file:<br> <code>docker-compose.yml</code> in a parent directory.<br>
 												3. Running it with command: <code>docker-compose up</code>.
 											</li>
 											<li>That way we can define services and link them with each other.</li>
@@ -305,6 +306,7 @@
 									<ul>
 										<li>Code:
 											<br>
+											# declaring verison of docker compose file format<br>
 											<code>version: "3.7"</code><br>
 											<code>services:</code><br>&nbsp&nbsp&nbsp
 												<code>flask:</code><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
