--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 											<code>docker images python</code><br>
 											<code>docker container stop image_name</code><br>
 											- entering container:<br>
-											<code>docker container exec -it image_name bash</code><br>
+											<code>docker container exec -it image_name bash</code>
 										</li>
 										<li>Getting all dependencies for a Python app:
 											<br>
@@ -322,7 +322,7 @@
 													<code>- DB_USERNAME=user_name</code><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 												# listing ports for internal services on the same network<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 												<code>expose:</code><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-													<code>- 8080</code><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+													<code>- 8080</code>
 										</li>
 										<li>Cmd:
 											<br>
